src/test/ui/traits/suggest-deferences/root-obligation.stderr
error[E0277]: the trait bound `&char: Pattern<'_>` is not satisfied
  --> $DIR/root-obligation.rs:6:38
   |
LL |         .filter(|c| "aeiou".contains(c))
   |                             -------- ^ the trait `Pattern<'_>` is not implemented for `&char`
   |                             |
   |                             required by a bound introduced by this call
   |
   = help: the trait `Pattern<'a>` is implemented for `char`
note: required by a bound in `core::str::<impl str>::contains`
  --> $SRC_DIR/core/src/str/mod.rs:LL:COL
   |
LL |     pub fn contains<'a, P: Pattern<'a>>(&'a self, pat: P) -> bool {
   |                            ^^^^^^^^^^^ required by this bound in `core::str::<impl str>::contains`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
